# polars-list-zip-struct

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: lib.rs
src/polars_list_zip_struct/: __init__.py  _core.py
tests/: test_list_zip_struct.py
