[package]
name = "polars_list_zip_struct"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "polars_list_zip_struct"
crate-type = ["cdylib"]

[dependencies]
arrow = { package = "polars-arrow", version = "0.54.4", default-features = false }
polars = { version = "0.54.4", default-features = false, features = ["dtype-struct", "allow_unused"] }
pyo3 = { version = "0.28" }
pyo3-polars = { version = "0.27.0", features = ["derive", "dtype-struct"] }
serde = { version = "1", features = ["derive"] }

