[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polars-list-zip-struct"
version = "0.1.0"
description = "Python fallback for Polars list.zip returning list[struct]."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "rufrozen" }]
keywords = ["polars", "list", "zip", "struct", "plugin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["polars>=1.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8"]
publish = ["build>=1.2", "twine>=5"]

[project.urls]
Homepage = "https://github.com/rufrozen/polars-list-zip-struct"
Issues = "https://github.com/rufrozen/polars-list-zip-struct/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
